--- a/src/output.css
+++ b/src/output.css
@@ -630,6 +630,10 @@ video {
   left: 2.75rem;
 }
 
+.left-16 {
+  left: 4rem;
+}
+
 .left-4 {
   left: 1rem;
 }
@@ -666,44 +670,12 @@ video {
   top: 1rem;
 }
 
-.top-52 {
-  top: 13rem;
-}
-
-.top-10 {
-  top: 2.5rem;
-}
-
-.top-44 {
-  top: 11rem;
-}
-
 .top-40 {
   top: 10rem;
 }
 
-.top-3 {
-  top: 0.75rem;
-}
-
-.left-24 {
-  left: 6rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.left-1 {
-  left: 0.25rem;
-}
-
-.left-16 {
-  left: 4rem;
-}
-
-.left-14 {
-  left: 3.5rem;
+.top-52 {
+  top: 13rem;
 }
 
 .z-10 {
@@ -756,9 +728,9 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.my-6 {
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
 }
 
 .-mb-10 {
@@ -875,6 +847,18 @@ video {
 
 .mt-8 {
   margin-top: 2rem;
+}
+
+.ml-14 {
+  margin-left: 3.5rem;
+}
+
+.ml-12 {
+  margin-left: 3rem;
+}
+
+.ml-10 {
+  margin-left: 2.5rem;
 }
 
 .block {
@@ -1019,14 +1003,6 @@ video {
 
 .max-w-md {
   max-width: 28rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
-}
-
-.max-w-xs {
-  max-width: 20rem;
 }
 
 .max-w-sm {
@@ -1188,6 +1164,12 @@ video {
   margin-bottom: calc(0.5rem * var(--tw-space-y-reverse));
 }
 
+.space-y-3 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1206,10 +1188,10 @@ video {
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
 }
 
-.space-y-3 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-y-reverse: 0;
-  margin-top: calc(0.75rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(0.75rem * var(--tw-space-y-reverse));
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1389,6 +1371,11 @@ video {
   border-top-color: rgb(201 195 186 / var(--tw-border-opacity));
 }
 
+.bg-\[\#20C85F\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 200 95 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#3F52FF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(63 82 255 / var(--tw-bg-opacity));
@@ -1407,6 +1394,11 @@ video {
 .bg-\[\#E6DCCF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(230 220 207 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#E8ECED\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 236 237 / var(--tw-bg-opacity));
 }
 
 .bg-\[\#EEEEEE\] {
@@ -1478,14 +1470,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#E8ECED\] {
+.bg-green-300 {
   --tw-bg-opacity: 1;
-  background-color: rgb(232 236 237 / var(--tw-bg-opacity));
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#20C85F\] {
+.bg-\[\#33D977\] {
   --tw-bg-opacity: 1;
-  background-color: rgb(32 200 95 / var(--tw-bg-opacity));
+  background-color: rgb(51 217 119 / var(--tw-bg-opacity));
 }
 
 .bg-cover {
@@ -1498,14 +1490,6 @@ video {
 
 .bg-right {
   background-position: right;
-}
-
-.bg-center {
-  background-position: center;
-}
-
-.bg-left {
-  background-position: left;
 }
 
 .bg-no-repeat {
@@ -1646,14 +1630,24 @@ video {
   padding-bottom: 1.25rem;
 }
 
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
 }
 
 .pb-10 {
@@ -1772,11 +1766,6 @@ video {
   line-height: 1rem;
 }
 
-.text-5xl {
-  font-size: 3rem;
-  line-height: 1;
-}
-
 .font-bold {
   font-weight: 700;
 }
@@ -1807,6 +1796,19 @@ video {
 
 .tracking-widest {
   letter-spacing: 0.1em;
+}
+
+.tracking-wide {
+  letter-spacing: 0.025em;
+}
+
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
+.text-\[\#0d0d0d\] {
+  --tw-text-opacity: 1;
+  color: rgb(13 13 13 / var(--tw-text-opacity));
 }
 
 .text-\[\#1f1f1f\] {
@@ -1859,9 +1861,19 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.text-blue-400 {
+  --tw-text-opacity: 1;
+  color: rgb(96 165 250 / var(--tw-text-opacity));
+}
+
 .text-blue-600 {
   --tw-text-opacity: 1;
   color: rgb(37 99 235 / var(--tw-text-opacity));
+}
+
+.text-gray-400 {
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-gray-500 {
@@ -1893,19 +1905,22 @@ video {
   color: ;
 }
 
-.text-\[\#0d0d0d\] {
-  --tw-text-opacity: 1;
-  color: rgb(13 13 13 / var(--tw-text-opacity));
+.text-\[20C85F\] {
+  color: 20C85F;
 }
 
-.text-gray-400 {
+.text-\[\#20C85F\] {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(32 200 95 / var(--tw-text-opacity));
 }
 
-.text-blue-400 {
+.text-\[\#\] {
+  color: #;
+}
+
+.text-\[\#0D3B66\] {
   --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+  color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2023,16 +2038,6 @@ video {
   color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
-.placeholder\:text-gray-700::-moz-placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
-.placeholder\:text-gray-700::placeholder {
-  --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity));
-}
-
 .placeholder\:text-gray-600::-moz-placeholder {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
@@ -2041,6 +2046,16 @@ video {
 .placeholder\:text-gray-600::placeholder {
   --tw-text-opacity: 1;
   color: rgb(75 85 99 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-700::-moz-placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
+}
+
+.placeholder\:text-gray-700::placeholder {
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .after\:absolute::after {
@@ -2135,6 +2150,11 @@ video {
   background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#33D977\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 217 119 / var(--tw-bg-opacity));
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
 }
@@ -2153,9 +2173,9 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.hover\:text-blue-400:hover {
+.hover\:text-\[\#0D3B66\]:hover {
   --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
+  color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -2165,10 +2185,6 @@ video {
 .hover\:shadow-orange-300:hover {
   --tw-shadow-color: #fdba74;
   --tw-shadow: var(--tw-shadow-colored);
-}
-
-.focus\:border:focus {
-  border-width: 1px;
 }
 
 .focus\:border-none:focus {
