--- a/src/output.css
+++ b/src/output.css
@@ -728,9 +728,9 @@ video {
   margin-bottom: 1.75rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .-mb-10 {
@@ -797,10 +797,6 @@ video {
   margin-right: 0.5rem;
 }
 
-.mr-5 {
-  margin-right: 1.25rem;
-}
-
 .ms-2 {
   margin-inline-start: 0.5rem;
 }
@@ -849,18 +845,6 @@ video {
   margin-top: 2rem;
 }
 
-.ml-14 {
-  margin-left: 3.5rem;
-}
-
-.ml-12 {
-  margin-left: 3rem;
-}
-
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
 .block {
   display: block;
 }
@@ -907,6 +891,10 @@ video {
 
 .h-\[400px\] {
   height: 400px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-screen {
@@ -1009,6 +997,14 @@ video {
   max-width: 24rem;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
+.max-w-xs {
+  max-width: 20rem;
+}
+
 .flex-shrink-0 {
   flex-shrink: 0;
 }
@@ -1106,6 +1102,14 @@ video {
   gap: 0.25rem;
 }
 
+.gap-12 {
+  gap: 3rem;
+}
+
+.gap-14 {
+  gap: 3.5rem;
+}
+
 .gap-2 {
   gap: 0.5rem;
 }
@@ -1122,6 +1126,22 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.space-x-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(2.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(2.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-14 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(3.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-16 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(4rem * var(--tw-space-x-reverse));
@@ -1132,6 +1152,12 @@ video {
   --tw-space-x-reverse: 0;
   margin-right: calc(0.5rem * var(--tw-space-x-reverse));
   margin-left: calc(0.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
+.space-x-24 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(6rem * var(--tw-space-x-reverse));
+  margin-left: calc(6rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .space-x-3 > :not([hidden]) ~ :not([hidden]) {
@@ -1146,6 +1172,12 @@ video {
   margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
+.space-x-6 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
+  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
+}
+
 .space-x-8 > :not([hidden]) ~ :not([hidden]) {
   --tw-space-x-reverse: 0;
   margin-right: calc(2rem * var(--tw-space-x-reverse));
@@ -1156,6 +1188,18 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(0.25rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(0.25rem * var(--tw-space-y-reverse));
+}
+
+.space-y-10 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(2.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(2.5rem * var(--tw-space-y-reverse));
+}
+
+.space-y-14 > :not([hidden]) ~ :not([hidden]) {
+  --tw-space-y-reverse: 0;
+  margin-top: calc(3.5rem * calc(1 - var(--tw-space-y-reverse)));
+  margin-bottom: calc(3.5rem * var(--tw-space-y-reverse));
 }
 
 .space-y-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1186,12 +1230,6 @@ video {
   --tw-space-y-reverse: 0;
   margin-top: calc(2rem * calc(1 - var(--tw-space-y-reverse)));
   margin-bottom: calc(2rem * var(--tw-space-y-reverse));
-}
-
-.space-x-6 > :not([hidden]) ~ :not([hidden]) {
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1.5rem * var(--tw-space-x-reverse));
-  margin-left: calc(1.5rem * calc(1 - var(--tw-space-x-reverse)));
 }
 
 .overflow-auto {
@@ -1250,6 +1288,11 @@ video {
   border-top-right-radius: 3.5rem;
 }
 
+.rounded-t-lg {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -1295,6 +1338,11 @@ video {
   border-style: none;
 }
 
+.border-\[\#20C85F\] {
+  --tw-border-opacity: 1;
+  border-color: rgb(32 200 95 / var(--tw-border-opacity));
+}
+
 .border-\[\#3F52FF\] {
   --tw-border-opacity: 1;
   border-color: rgb(63 82 255 / var(--tw-border-opacity));
@@ -1320,6 +1368,11 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
+.border-gray-200 {
+  --tw-border-opacity: 1;
+  border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -1339,6 +1392,11 @@ video {
 .border-b-\[\#E6DCCF\] {
   --tw-border-opacity: 1;
   border-bottom-color: rgb(230 220 207 / var(--tw-border-opacity));
+}
+
+.border-b-\[\#dbe5e8\] {
+  --tw-border-opacity: 1;
+  border-bottom-color: rgb(219 229 232 / var(--tw-border-opacity));
 }
 
 .border-b-gray-300 {
@@ -1376,6 +1434,11 @@ video {
   background-color: rgb(32 200 95 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#242D3C\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(36 45 60 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#3F52FF\] {
   --tw-bg-opacity: 1;
   background-color: rgb(63 82 255 / var(--tw-bg-opacity));
@@ -1411,6 +1474,11 @@ video {
   background-color: rgb(239 151 135 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F27405\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 116 5 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#F2EDE6\] {
   --tw-bg-opacity: 1;
   background-color: rgb(242 237 230 / var(--tw-bg-opacity));
@@ -1441,9 +1509,19 @@ video {
   background-color: rgb(249 226 197 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#FBFCFA\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(251 252 250 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#FE898D\] {
   --tw-bg-opacity: 1;
   background-color: rgb(254 137 141 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f7fafb\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(247 250 251 / var(--tw-bg-opacity));
 }
 
 .bg-black {
@@ -1470,22 +1548,16 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#33D977\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 217 119 / var(--tw-bg-opacity));
-}
-
 .bg-cover {
   background-size: cover;
 }
 
 .bg-scroll {
   background-attachment: scroll;
+}
+
+.bg-center {
+  background-position: center;
 }
 
 .bg-right {
@@ -1540,6 +1612,16 @@ video {
   padding-right: 2.5rem;
 }
 
+.px-12 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+
+.px-14 {
+  padding-left: 3.5rem;
+  padding-right: 3.5rem;
+}
+
 .px-16 {
   padding-left: 4rem;
   padding-right: 4rem;
@@ -1578,6 +1660,11 @@ video {
 .px-8 {
   padding-left: 2rem;
   padding-right: 2rem;
+}
+
+.px-\[5rem\] {
+  padding-left: 5rem;
+  padding-right: 5rem;
 }
 
 .py-1 {
@@ -1640,16 +1727,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.px-12 {
-  padding-left: 3rem;
-  padding-right: 3rem;
-}
-
-.px-14 {
-  padding-left: 3.5rem;
-  padding-right: 3.5rem;
-}
-
 .pb-10 {
   padding-bottom: 2.5rem;
 }
@@ -1708,6 +1785,10 @@ video {
 
 .ps-9 {
   padding-inline-start: 2.25rem;
+}
+
+.pt-0 {
+  padding-top: 0px;
 }
 
 .pt-4 {
@@ -1794,16 +1875,17 @@ video {
   line-height: 1.5rem;
 }
 
+.tracking-wider {
+  letter-spacing: 0.05em;
+}
+
 .tracking-widest {
   letter-spacing: 0.1em;
 }
 
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
-.tracking-wider {
-  letter-spacing: 0.05em;
+.text-\[\#0D3B66\] {
+  --tw-text-opacity: 1;
+  color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
 .text-\[\#0d0d0d\] {
@@ -1814,6 +1896,11 @@ video {
 .text-\[\#1f1f1f\] {
   --tw-text-opacity: 1;
   color: rgb(31 31 31 / var(--tw-text-opacity));
+}
+
+.text-\[\#20C85F\] {
+  --tw-text-opacity: 1;
+  color: rgb(32 200 95 / var(--tw-text-opacity));
 }
 
 .text-\[\#333\] {
@@ -1846,6 +1933,11 @@ video {
   color: rgb(239 151 135 / var(--tw-text-opacity));
 }
 
+.text-\[\#F8B32A\] {
+  --tw-text-opacity: 1;
+  color: rgb(248 179 42 / var(--tw-text-opacity));
+}
+
 .text-\[\#FF7648\] {
   --tw-text-opacity: 1;
   color: rgb(255 118 72 / var(--tw-text-opacity));
@@ -1859,11 +1951,6 @@ video {
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
-}
-
-.text-blue-400 {
-  --tw-text-opacity: 1;
-  color: rgb(96 165 250 / var(--tw-text-opacity));
 }
 
 .text-blue-600 {
@@ -1899,28 +1986,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[20C85F\] {
-  color: 20C85F;
-}
-
-.text-\[\#20C85F\] {
-  --tw-text-opacity: 1;
-  color: rgb(32 200 95 / var(--tw-text-opacity));
-}
-
-.text-\[\#\] {
-  color: #;
-}
-
-.text-\[\#0D3B66\] {
-  --tw-text-opacity: 1;
-  color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2125,6 +2190,11 @@ video {
   border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
+.hover\:bg-\[\#33D977\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(51 217 119 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-\[\#EFEFEF\]:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(239 239 239 / var(--tw-bg-opacity));
@@ -2150,9 +2220,9 @@ video {
   background-color: rgb(163 230 53 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-\[\#33D977\]:hover {
+.hover\:bg-orange-400:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(51 217 119 / var(--tw-bg-opacity));
+  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -2161,6 +2231,11 @@ video {
 
 .hover\:font-semibold:hover {
   font-weight: 600;
+}
+
+.hover\:text-\[\#0D3B66\]:hover {
+  --tw-text-opacity: 1;
+  color: rgb(13 59 102 / var(--tw-text-opacity));
 }
 
 .hover\:text-gray-800:hover {
@@ -2173,9 +2248,9 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#0D3B66\]:hover {
+.hover\:text-orange-400:hover {
   --tw-text-opacity: 1;
-  color: rgb(13 59 102 / var(--tw-text-opacity));
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
 .hover\:underline:hover {
@@ -2465,6 +2540,14 @@ video {
 
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:items-center {
+    align-items: center;
+  }
+
+  .lg\:justify-between {
+    justify-content: space-between;
   }
 
   .lg\:text-6xl {
